JS was created along with corresponding updates to html and css files

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ button {
     border-radius: 5px;
 }
   
-.tip {
+.outstanding-balance {
     text-align: center;
     font-size: 18px;
     display: none;
