--- a/style.css
+++ b/style.css
@@ -1,8 +1,82 @@
+:root {
+    --white: #ffffff;
+    --light: whitesmoke;
+    --light-grey: #e8e8e8;
+    --pink: #ff176b;
+    --medium-dark: #777;
+    --dark: #242526;
+    --border-rad-lg: 15px;
+}
+
+
+html, body {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+}
+
+
 body {
-    background-color: #001f4f;
-    font-family: "Raleway", sans-serif;
+    font-family: 'Poppins';
+    background-size: cover;
+    background-repeat: repeat-y;
+    background-color: url('imgs/chameleon.jpeg');
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+/* =================
+      Typography 
+     ================= */
+
+h1 {
+font-family: 'Playfair Display SC', serif;
+text-align: center;
+}
+
+h2 {
+    font-size: 1.3em;
+}
+
+p {
+    line-height: 1.35em;
 }
   
+/* =================
+      Sections 
+     ================= */
+
+header {
+    background-color: var(--light);
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .3em;
+}
+    
+header>img {
+    height: 26px;
+}
+
+header>a {
+    color: #242526;
+    font-size: 1.5em;
+    text-decoration: none;
+    padding: 1em 0;
+}
+
+header span {
+    font-weight: 700;
+}
+
+main {
+    padding: 0 1em;
+}
+
+
 .container {
     width: 350px;
     height: 500px;
@@ -14,7 +88,7 @@ body {
     border-radius: 20px;
 }
   
-h1 {
+/* h1 {
     position: absolute;
     left: 50%;
     top: -60px;
@@ -28,7 +102,7 @@ h1 {
     font-size: 18px;
     text-align: center;
     padding: 10px;
-}
+} */
   
 .wrapper {
     padding: 20px;
@@ -67,4 +141,17 @@ button {
     text-align: center;
     font-size: 18px;
     /* display: none; */
+}
+
+
+/* =================
+      Footer 
+     ================= */
+
+footer {
+    background-color: var(--dark);
+    color: var(--light);
+    padding: .8em;
+    font-size: .7em;
+    text-align: center
 }
