--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
+
 
 /* =================
       Typography 
@@ -57,7 +57,7 @@ header {
 }
     
 header>img {
-    height: 26px;
+    height: 50px;
 }
 
 header>a {
@@ -86,13 +86,11 @@ main {
     /* display: grid; */
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    /* align-items: center; */
     /* padding: 1.3em .5em; */
     /* min-height: 500px; */
 
 }
-
-
 
 .action-steps {
     display: grid;
@@ -127,7 +125,7 @@ main {
     /* grid-area: 1 / 3 / 2 / 4; */
 }
 
-.total-college-years>option{
+#total-years {
     text-align: center;
 }
 
@@ -138,11 +136,30 @@ main {
     /* grid-area: 2 / 2 / 3 / 3; */
 }
 
+#num-semesters {
+    text-align: center;
+}
+
 .weekly-hours-worked {
     width: 100%;
     height: 0.1em;
     text-align: center;
     /* grid-area: 2 / 3 / 3 / 4; */
+}
+
+#hours-worked {
+    text-align: center;
+}
+
+.weekly-hourly-rate {
+    width: 100%;
+    height: 0.1em;
+    text-align: center;
+    /* grid-area: 2 / 3 / 3 / 4; */
+}
+
+#hourly-rate {
+    text-align: center;
 }
 
 /* .container {
@@ -217,9 +234,12 @@ button {
      ================= */
 
 footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: .8em;
     background-color: var(--dark);
     color: var(--light);
-    padding: .8em;
     font-size: .7em;
     text-align: center
 }
