--- a/style.css
+++ b/style.css
@@ -25,13 +25,6 @@ body {
     flex-direction: column;
 }
 
-/* .page-wrapper {
-    min-height: 100%;
-    position: relative;
-    overflow-y: auto;
-} */
-
-
 /* =================
       Typography 
      ================= */
@@ -40,7 +33,6 @@ h1 {
     font-family: 'Playfair Display SC', serif;
     text-align: center;
     padding: 20px 0;
-    background-color: var(--dark);
     margin: 0;
 }
 
@@ -96,7 +88,7 @@ header span {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh; /* 100% viewport height */
+    min-height: calc(100vh - 65vh); /* 100% viewport height */
 
     /* padding: 1.3em .5em; */
     /* min-height: 500px; */
@@ -115,10 +107,10 @@ header span {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
-    max-width: 50%; /* Contain content in 50% of webpage */
+    max-width: 750%; /* Contain content in 50% of webpage */
     margin-left: auto;
     margin-right: auto;
-    padding-top: 3em;
+    padding-top: 1em;
     text-align: center; /* Center title block */
 }
 
