--- a/style.css
+++ b/style.css
@@ -71,12 +71,6 @@ header span {
     font-weight: 700;
 }
 
-/* main {
-    padding: 0 1em;
-} */
-
-
-
 
 /* =================
       Setup 
@@ -103,16 +97,57 @@ header span {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
-    max-width: 750%; /* Contain content in 50% of webpage */
+    max-width: 75%; /* Contain content in 50% of webpage */
     margin-left: auto;
     margin-right: auto;
     padding-top: 1em;
     text-align: center; /* Center title block */
 }
 
-.tuition-cost.total-college-years.outstanding-balance>input {
+.tuition-cost {
+    width: 100%;
+    height: 0.5em;
+}
+
+.tuition-cost > input {
     text-align: center;
 }
+
+.total-college-years {
+    width: 100%;
+    height: 0.1em;
+    text-align: center;
+}
+
+select {
+    text-align: center;
+}
+
+#outstanding-balance {
+    text-align: center;
+    font-size: 18px;
+    padding-bottom: 3.5em;
+}
+
+#total {
+    text-align: center;
+}
+
+#income-generation {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    max-width: 75%; /* Contain content in 50% of webpage */
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 1em;
+    padding-bottom: 10em;
+    text-align: center; /* Center title block */
+}
+
+/* .tuition-cost.total-college-years.outstanding-balance>input {
+    text-align: center;
+} */
 
 /* .action-steps {
     display: grid;
@@ -125,24 +160,6 @@ header span {
     border-radius: var(--border-rad-lg);
     margin-bottom: 15em;
 } */
-
- .tuition-cost {
-    width: 100%;
-    height: 0.5em;
-    
-}
-
-.total-college-years {
-    width: 100%;
-    height: 0.1em;
-    text-align: center;
-}
-
-#outstanding-balance {
-    text-align: center;
-    font-size: 18px;
-}
-
 /* Income Generated Sectionj */
 /* .semesters-worked {
     width: 100%;
@@ -245,7 +262,7 @@ button {
      ================= */
 
 footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     padding: .8em; /* Footer Height */
