--- a/style.css
+++ b/style.css
@@ -32,12 +32,19 @@ body {
 h1 {
     font-family: 'Playfair Display SC', serif;
     text-align: center;
-    padding: 20px 0;
+    /* padding: 40px 0; */
     margin: 0;
 }
 
 h2 {
+    font-family: 'Playfair Display SC', serif;
     font-size: 1.3em;
+    font-weight: normal;
+    max-width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 0.5em;
+    text-align: center; /* Center title block */
 }
 
 p {
@@ -71,6 +78,13 @@ header span {
     font-weight: 700;
 }
 
+#cost_title {
+    padding-top: 2.5em;
+}
+
+#income_title {
+    padding-top: 1em;
+}
 
 /* =================
       Setup 
@@ -82,7 +96,7 @@ header span {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: calc(100vh - 65vh); /* 100% viewport height */
+    min-height: 100vh; /* 100% viewport height */
 
     /* padding: 1.3em .5em; */
     /* min-height: 500px; */
