--- a/style.css
+++ b/style.css
@@ -147,6 +147,12 @@ select {
     text-align: center;
 }
 
+/* Loan Interest Considerations */
+
+#hidden_loan_type_content {
+    display: none;
+}
+
 hr {
     max-width: 75%;
 }
