--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ select {
 
 /* Loan Interest Considerations */
 #tutorial {
-    visibility: hidden;
+    display: none;
     background-color: #76D7C4;
     color: black;
     width: 100px;
@@ -166,19 +166,15 @@ select {
 }
 
 #hidden_loan_type_undecided {
-    visibility: hidden;
-    background-color: #76D7C4;
-    color: black;
-    /* width: 100px;
-    height: 100px; */
+    display: none;
 }
 
 #hidden_loan_type_fixed {
-    visibility: hidden;
-    /* background-color: #76D7C4; */
-    /* color: black; */
-    /* width: 100px;
-    height: 100px; */
+    display: none;
+}
+
+#hidden_loan_type_variable {
+    display: none;
 }
 
 
