--- a/style.css
+++ b/style.css
@@ -157,12 +157,23 @@ select {
 }
 
 /* Loan Interest Considerations */
-#tutorial {
+/* #tutorial {
     display: none;
     background-color: #76D7C4;
     color: black;
     width: 100px;
     height: 100px;
+} */
+
+#loan-type {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    max-width: 75%; /* Contain content in 50% of webpage */
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 1em;
+    text-align: center; /* Center title block */
 }
 
 #hidden_loan_type_undecided {
@@ -181,6 +192,9 @@ select {
 /* #hidden_loan_type_description {
     display: none;
 } */
+
+
+
 
 hr {
     max-width: 75%;
