--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: .3em;
+    gap: .3em; /* Gap from image */
 }
     
 header>img {
@@ -89,6 +89,50 @@ header span {
     font-weight: 700;
 }
 
+/* Tab Config */
+.tab {
+    display: flex;
+    overflow: hidden;
+    border: 1px solid #F5F5F5;
+    background-color: #fafafa;
+}
+
+.tab button {
+    background-color: inherit;
+    float: center;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+.tab button:hover {
+    background-color: #ddd;
+}
+
+.tab button.active {
+    background-color: #C2C7E2;
+    color: #4338e5;
+}
+
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    /* align-items: center; */
+    animation: fadeEffect 1s;
+}   
+
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
 #main_title {
     padding-top: 2.5em;
 }
@@ -99,6 +143,10 @@ header span {
 
 #income_title {
     padding-top: 1em;
+}
+
+#wage_research_title {
+    padding-top: 2.5em;
 }
 
 /* =================
@@ -266,7 +314,12 @@ hr {
     text-align: center; /* Center title block */
 }
 
+/* #wage_research_title {
+    padding
+} */
+
 #start-wage-research {
+    padding-top: 1.5em;
     padding-bottom: 5em;
     text-align: center;
     font-size: 1.3em;
