Research tabs workflow was built to allow users to take multiple research paths

--- a/style.css
+++ b/style.css
@@ -154,14 +154,14 @@ header span {
     display: flex;
 }
 
-/* Tab Config */
-.tab {
+/* Main Tab Config */
+.main-tab {
     text-align: center;
     overflow: hidden;
     padding: 5px 5px;
 }
 
-.tab button {
+.main-tab button {
     background-color: inherit;
 
     /* top: 50%; */
@@ -175,11 +175,11 @@ header span {
     transition: 0.3s;
 }
 
-.tab button:hover {
+.main-tab button:hover {
     background-color: #ddd;
 }
 
-.tab button.active {
+.main-tab button.active {
     background-color: #C2C7E2;
     color: #4338e5;
 }
@@ -370,7 +370,7 @@ hr {
 
 #wage-research-reality {
     padding-top: 2.5em;
-    padding-bottom: 3em;
+    padding-bottom: 5em;
 }
 
 #research-instructions-subtitle-p1 {
@@ -381,11 +381,49 @@ hr {
     /* padding-top: 0em; */
 }
 
+/* Research Tab Config */
+.research-tab {
+    text-align: center;
+    overflow: hidden;
+    padding: 5px 5px;
+}
+
+.research-tab button {
+    background-color: inherit;
+
+    /* top: 50%; */
+    /* position: fixed; */
+    /* margin-left: auto;
+    margin-right: auto; */
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+.research-tab button:hover {
+    background-color: #ddd;
+}
+
+.research-tab button.active {
+    background-color: #C2C7E2;
+    color: #4338e5;
+}
+
+.research-content {
+    display: none;
+    padding: 6px 12px;
+    border-top: none;
+    width: 100%;
+    animation: fadeEffect 1s;
+}
+
 #wage-research-ex-p1{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2em;
-    max-width: 50%; /* Contain content in 50% of webpage */
+    max-width: 50%;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 2.5em;
@@ -405,20 +443,10 @@ hr {
     text-align: center;
 }
 
-.research-instructions ul{
-    /* width: 40%; */
-    /* margin-left: auto;
-    margin-right: auto; */
-}
-
 .research-instructions li {
     float:center;
 }
 
-#outbound-occupation-url {
-    padding-top: 5em;
-    padding-bottom: 5em;
-}
 
 /* =================
       Footer 
