Uncovered bug that impeded changes to screen based on smaller screen sizes

--- a/style.css
+++ b/style.css
@@ -486,7 +486,69 @@ footer {
 /* =================
       Media Config 
      ================= */
-@media (max-width: 600px) {
+@media screen and (max-width: 450px) {
+    /* screen and */
+
+    header {
+        background-color: #4338e5;
+    }
+
+    /* General Font Size Config */
+    h1 {
+        font-family: 'Playfair Display SC', serif;
+        text-align: center;
+        margin: 0;
+
+    }
+
+    h2 {
+        font-family: 'Playfair Display SC', serif;
+        font-size: 20px;
+        font-weight: normal;
+        max-width: 75%;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 0.5em;
+        text-align: center;
+    }
+
+    #main_page_subtitle {
+        padding-bottom: 1em;
+    }
+
+    h3 {
+        font-family: 'Playfair Display SC', serif;
+        font-size: 1.3em;
+        font-weight: medium;
+        text-align: left;
+        max-width: 75%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    ul {
+        font-family: 'Playfair Display SC', serif;
+        font-size: 1.5em;
+        font-weight: normal;
+        max-width: 60%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: left;
+    }
+
+    #research-link-explained {
+        font-weight: 200;
+    }
+
+    p {
+        font-size: 18px;
+        line-height: 1.35em;
+    }
+
+
+
+    /* Section Configs */
+
     #academic-cost {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -497,21 +559,17 @@ footer {
         padding-top: 1em;
         padding-bottom: 5em;
         text-align: center;
-        /* Center title block */
     }
 
     #income-generation {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        /* grid-gap: 5px; */
         max-width: 80%;
-        /* Contain content in 50% of webpage */
         margin-left: auto;
         margin-right: auto;
         padding-top: 1em;
         padding-bottom: 4em;
         text-align: center;
-        /* Center title block */
     }
 
     .earnings {
@@ -519,13 +577,10 @@ footer {
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 20px;
         max-width: 90%;
-        /* Contain content in 50% of webpage */
         margin-left: auto;
         margin-right: auto;
-        /* padding-top: 1em; */
         padding-bottom: 5em;
         text-align: center;
-        /* Center title block */
     }
 
     #wage-research-expectations {
@@ -533,7 +588,6 @@ footer {
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 4em;
         max-width: 70%;
-        /* Contain content in 50% of webpage */
         margin-left: auto;
         margin-right: auto;
         padding-bottom: 3.5em;
